--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 5800:5800
     volumes:
       - ./config:/config
+    environment:
+      - VNC_PASSWORD=monsec_live
   rtmp:
     image: tiangolo/nginx-rtmp
     ports:
