Put everything behind a reverse proxy

--- a/remote/Dockerfile
+++ b/remote/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:13
 
+ARG homepage=/
+
 RUN npm install -g serve
 
 COPY obs-tablet-remote /app
 WORKDIR /app
 RUN npm install --ignore-scripts
-RUN npm run build -- --homepage /
+RUN BUILD_HOMEPAGE="$homepage" npm run build
+
+COPY serve.json /serve.json
 
 EXPOSE 5000
-CMD [ "/usr/local/bin/serve", "-l", "tcp://0.0.0.0:5000", "/app/dist" ]
+CMD [ "/usr/local/bin/serve", "-l", "tcp://0.0.0.0:5000", "-c", "/serve.json" ]
