--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,28 @@
 version: '3'
 
 services:
+  web:
+    image: abiosoft/caddy:no-stats
+    ports:
+      - 5555:5555
+    volumes:
+      - ./caddy/Caddyfile:/etc/Caddyfile
+      - caddy_data:/root/.caddy
   obs:
     build: ./obs
-    ports:
-      - 5800:5800
-      - 4444:4444
     volumes:
       - ./config:/config
     environment:
       - VNC_PASSWORD=monsec_live
   remote:
-    build: ./remote
-    ports:
-      - 5000:5000
+    build:
+      context: ./remote
+      args:
+        - homepage=/remote
   rtmp:
     image: tiangolo/nginx-rtmp
     ports:
       - 1935:1935
+
+volumes:
+  caddy_data:
