--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 5555:5555
     volumes:
       - ./caddy/Caddyfile:/etc/Caddyfile
+      - ./caddy/index.html:/srv/index.html
       - caddy_data:/root/.caddy
     environment:
       - AUTH_USER=monsec
