--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,7 @@ services:
       - ./caddy/Caddyfile:/etc/Caddyfile
       - ./caddy/index.html:/srv/index.html
       - caddy_data:/root/.caddy
-    environment:
-      - AUTH_USER=monsec
-      - AUTH_PASS=monsec_live
+    env_file: .env
   obs:
     build: ./obs
     volumes:
