--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     image: tiangolo/nginx-rtmp
     ports:
       - 1935:1935
+    volumes:
+      - ./rtmp/nginx.conf:/etc/nginx/nginx.conf
 
 volumes:
   caddy_data:
