--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./caddy/index.html:/srv/index.html
       - caddy_data:/root/.caddy
     env_file: .env
+
   obs:
     build: ./obs
     volumes:
@@ -25,6 +26,29 @@ services:
       - 1935:1935
     volumes:
       - ./rtmp/nginx.conf:/etc/nginx/nginx.conf
+
+  netdata:
+    image: netdata/netdata
+    hostname: ${CS_DOMAIN}
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - apparmor:unconfined
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - DO_NOT_TRACK=1
+      - DOCKER_HOST=docker-proxy:2375
+    depends_on:
+      - docker-proxy
+  docker-proxy:
+    image: tecnativa/docker-socket-proxy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - CONTAINERS=1
 
 volumes:
   caddy_data:
