--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-CS_DOMAIN=cloudstream.monsec.io
+DOMAIN=cloudstream.monsec.io
+DUCKDNS_SUBDOMAIN=monsec-cloud-stream
+DUCKDNS_TOKEN=xxxxxxxxxxxxxxxx
 AUTH_USER=monsec
 AUTH_PASS=monsec
