--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,13 @@ services:
         - homepage=/remote
   rtmp:
     restart: unless-stopped
-    image: tiangolo/nginx-rtmp
+    build: ./rtmp
+    command: /app/start.sh
     ports:
       - 1935:1935
-    volumes:
-      - ./rtmp/nginx.conf:/etc/nginx/nginx.conf
+    environment:
+      - AUTH_USER=${AUTH_USER}
+      - AUTH_PASS=${AUTH_PASS}
 
   duckdns:
     restart: unless-stopped
