Revert "Remove use of DOMAIN"
This reverts commit 46f939a1b5c5ddc47e09693b385f98931ebe782a.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
   netdata:
     restart: unless-stopped
     image: netdata/netdata
-    hostname: monsec-cloud-stream
+    hostname: ${DOMAIN}
     cap_add:
       - SYS_PTRACE
     security_opt:
