Fix automatic HTTPS

--- a/caddy/Caddyfile.template
+++ b/caddy/Caddyfile.template
@@ -1,18 +1,6 @@
-https://* http://localhost http://127.0.0.1 {
-  tls {
-    ask http://localhost/tls
-  }
-  rewrite /tls {
-    if {hostonly} is {$DOMAIN}
-    to /tls/ok
-  }
-  rewrite /tls {
-    if {hostonly} not {$DOMAIN}
-    to /tls/fail
-  }
-  status 200 /tls/ok
-  status 404 /tls/fail
-
+http://{$DOMAIN} https://{$DOMAIN} http://localhost http://127.0.0.1 {
+  ${TLS_POLICY}
+  
   basicauth {$AUTH_USER} {$AUTH_PASS} {
     "MonSec Cloud Stream"
     /
