Add whiterabbit font to OBS

--- a/obs/Dockerfile
+++ b/obs/Dockerfile
@@ -5,3 +5,6 @@ RUN add-pkg wget && \
     wget -O obs-websocket.deb https://github.com/Palakis/obs-websocket/releases/download/4.7.0/obs-websocket_4.7.0-1_amd64.deb && \
     dpkg -i obs-websocket.deb && \
     rm obs-websocket.deb
+
+COPY whitrabt/whitrabt.ttf /usr/share/fonts
+RUN fc-cache
